popart/src/objects/ArtMash_Picture__c.object
<CustomObject>
    <description>Details for one particular ArtMash Picture</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this picture active and available on the site?</description>
        <inlineHelpText>Is this picture active and available on the site?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArtMash_Contest__c</fullName>
        <description>Which contest does this picture belong to?</description>
        <inlineHelpText>Which contest does this picture belong to?</inlineHelpText>
        <label>ArtMash Contest</label>
        <referenceTo>ArtMash_Contest__c</referenceTo>
        <relationshipLabel>Contest</relationshipLabel>
        <relationshipName>ArtMash_Picture</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Picture_Document_Id__c</fullName>
        <description>The current picture document ID</description>
        <inlineHelpText>The current picture document ID</inlineHelpText>
        <label>Current Picture Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Text__c</fullName>
        <defaultValue>&quot;Put caption here!&quot;</defaultValue>
        <description>What is the default text that should appear in the textbox?</description>
        <inlineHelpText>What is the default text that should appear in the textbox?</inlineHelpText>
        <label>Default Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A short description of the image</description>
        <inlineHelpText>A short description of the image</inlineHelpText>
        <label>Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Font_Family__c</fullName>
        <description>What font should the text box use?</description>
        <inlineHelpText>What font should the text box use?</inlineHelpText>
        <label>Font Family</label>
        <picklist>
            <picklistValues>
                <fullName>Arial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Book Antiqua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comic Sans MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cursive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helvetica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucida Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palatino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palatino Linotype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times New Roman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verdana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Font_Size__c</fullName>
        <defaultValue>12</defaultValue>
        <description>How large should the font be for this picture?</description>
        <inlineHelpText>How large should the font be for this picture?</inlineHelpText>
        <label>Font Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <formula>&quot;https://c.na9.content.force.com/servlet/servlet.ImageServer?id=&quot;+ Current_Picture_Document_Id__c +&quot;&amp;oid=&quot;+$Organization.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Caption_Length__c</fullName>
        <defaultValue>160</defaultValue>
        <description>How long can a caption for this photo be?</description>
        <inlineHelpText>How long can a caption for this photo be?</inlineHelpText>
        <label>Maximum Caption Length</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Box_Height__c</fullName>
        <description>How tall should the text box be?</description>
        <inlineHelpText>How tall should the text box be?</inlineHelpText>
        <label>Text Box Height</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Left_Offset__c</fullName>
        <description>How far from the left of the image should the text box be?</description>
        <inlineHelpText>How far from the left of the image should the text box be?</inlineHelpText>
        <label>Text Box Left Offset</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Top_Offset__c</fullName>
        <description>How far from the top of the image should the text box be?</description>
        <inlineHelpText>How far from the top of the image should the text box be?</inlineHelpText>
        <label>Text Box Top Offset</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Box_Width__c</fullName>
        <description>How wide should the text box be?</description>
        <inlineHelpText>How wide should the text box be?</inlineHelpText>
        <label>Text Box Width</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <defaultValue>&quot;Black&quot;</defaultValue>
        <description>Color to use for text in bubble. Can be a hexidecimal charcode or a text string.</description>
        <inlineHelpText>Color to use for text in bubble. Can be a hexidecimal charcode or a text string.</inlineHelpText>
        <label>Text Color</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ArtMash Picture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArtMash Picture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>